css overflow corrected

--- a/lesson2/styles/style.css
+++ b/lesson2/styles/style.css
@@ -2,7 +2,6 @@
 
 h1, h2, h3{
     font-family: "Kanit", Arial, Helvetica, sans-serif;
-    padding: 10px;
 }
 
 body {
@@ -16,7 +15,7 @@ body {
 }
 
 header, footer {
-    padding: 1em;
+    padding: 0.5em;
     background-color: #5f658e;
     text-align: center;
     color: #F8F4F1;
@@ -38,20 +37,20 @@ section{
     background-color: #aba3aa7a;
     border-radius: 10px;
     text-align: center;
-    border: solid 2px #515677;
 }
 
 section h2{
     color: #F8F4F1;
     background-color: #5f658e;
     margin-top: -3px ;
-    border-radius: 10px;
+    border-radius: 5px;
+    padding: 1em;
 
 }
-
 section h3{
     color: #515677;
 }
+
 
 .box_one{
     grid-column: 1/2;
@@ -65,22 +64,21 @@ section h3{
 
 img{
     max-width : 350px;
-    width: 100%;
+    width: 80%;
     height: auto;
-    padding: 10px 10px 0 10px;
+    margin-top: 1em;
 }
 
 p{
     text-align: start;
-    padding: 0 10px 10px 10px;
+    padding: 1em;
 }
 
 
-a {
+section a {
     color: #5f658e;
     text-decoration: underline;
-    text-align: center;
-    padding: 10px;
+    padding: 1em;
 }
 
 footer a {
@@ -112,5 +110,9 @@ footer a {
 
     section{
         margin: 15px;
+    }
+
+    a{
+        font-size:medium;
     }
 }
